@@ -19,6 +19,8 @@ Changes from 2.3.1 to XXX
 
 - Added support for the float16 data type.  It is only available if numpy_
   provides it as well (i.e. numpy_ >= 1.6).  See :issue:`51`.
+- Dropped support for HDF5 1.6.x. Now PyTables uses the HDF5 1.8 API
+  (closes :issue:`105`)
 - Blosc updated to v. 1.1.3
 - Improved support for bzip2 on Windows (:issue:`116`).  Thanks to cgohlke.
 - Improved multi-arch support in GNU/Linux platforms (closes :issue:`124`)
